# ocr

./: .gitignore  README.md  ocr.py  pyproject.toml  run_ocr_slurm.sh
examples/predicting_market_reactions/: paper.md
examples/predicting_market_reactions/tables/: table_1.md  table_10.md  table_11.md  table_12.md  table_13.md  table_14.md  table_15.md  table_16.md  table_2.md  table_3.md  table_4.md  table_5.md  table_6.md  table_7.md  table_8.md  table_9.md
papers/: .gitkeep
src/paper_ocr/: __init__.py  cli.py
tests/: test_reorganize.py
